issue #3 - overlaping idleCDOs icons in card

--- a/risk-cards-ui/src/app/card-group/card-group.component.scss
+++ b/risk-cards-ui/src/app/card-group/card-group.component.scss
@@ -62,3 +62,8 @@
   background: linear-gradient(135deg, #289cf5, #84c0ec) !important;
   color: #fff;
 }
+
+.overlap-item {
+  margin-right: -20px;
+  border: 2px solid #fff;
+}
